# Finale_databattle2025

./: README.md  docker-compose.yml
backend/: database.db  dockerfile  evaluate_retrivial.py  main.py  pyproject.toml  utils.py
backend/data/: embed_pdf_from_images.py  extract_images_from_pdf.py
backend/data/question-categories/: categorie.json  categoriev2.json
backend/data/questions/: creation_json.py  embeddings.py  execution.py  extraction_open_EPAC.py  extraction_qcm_EPAC.py  extraction_qcm_EQE.py  requirements.txt
backend/services/: genai.py  retrivial.py
backend/templates/: chat.html  chatbot.html  create_evaluator.html  edit_evaluator.html  evaluator.html  feedback.html  index.html  question.html
frontend/: dockerfile  next.config.mjs  package.json  pnpm-lock.yaml  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/chat/: page.tsx
frontend/app/chat/with-buttons/: page.tsx
frontend/app/chat/with-messages/: page.tsx
frontend/app/chat/with-toggle/: page.tsx
frontend/app/evaluators/: page.tsx
frontend/app/evaluators/[id]/: page.tsx
frontend/app/evaluators/create/: page.tsx
frontend/app/quizz/: layout.tsx  page.tsx
frontend/components/: evaluatorItem.jsx
frontend/components/shared/: header.tsx
frontend/styles/: globals.css
